--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@ Hello there, awesome person!
 
 <html>
   
+    <head>
+      <title> Welcome to my website! </title>
+    </head>
+  
     <body>
       
       Hello there, awesome person!
